<resources>
    <string name="app_name">MyCryptoWallet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_trading">Trading Bot</string>
    <string name="add_crypto">Add Crypto</string>
    <string name="empty_not_saved">Crypto not saved because it is empty.</string>
    <string name="button_save">Save</string>
    <string name="hint_crypto_name">Name...</string>
    <string name="hint_crypto_token">Token...</string>
    <string name="button_settings_description">Button Settings</string>
    <string name="default_notification_channel_id">Default Channel ID</string>
    <string name="hint_crypto_amount">Amount...</string>
    <string name="hint_value">Value...</string>
    <string name="add_order">Add order</string>
    <string name="buy_order">Buy order</string>
    <string name="sell_order">Sell order</string>
    <string name="trading_bot_settings">Trading bot Settings</string>
    <string name="initial_investment">Initial Investment</string>
    <string name="notification">Notification</string>
    <string name="save">Save</string>
    <string name="home_title">Your cryptos wallet</string>
    <string name="time_interval_24hour">24 hours</string>
    <string name="time_interval_1week">1 week</string>
    <string name="time_interval_1month">1 month</string>
    <string name="time_interval_1year">1 year</string>
    <string name="wallet">Wallet</string>
    <string name="initial_wallet">Initial wallet: </string>
    <string name="trades_duration">%1$s trades</string>
    <string-array name="trade_duration">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
</resources>