<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_order_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_crypto_amount"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/edit_order_amount_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_value"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/buy_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding">
        <RadioButton
            android:id="@+id/buy_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buy_order"/>
        <RadioButton
            android:id="@+id/sell_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sell_order"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_save_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/button_save"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel" />

</LinearLayout>